# observability-mtl-instrument

./: .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pipeline.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: index.md
docs/api/: logs.md  metrics.md  traces.md
docs/api/logs/: fullLogConfig.md  fullLogConfigAsync.md
example_fastapi_app/: .dockerignore  docker-compose.yml  main.py  requirements.txt
example_fastapi_app/middleware/: ObservabilityMiddleware.py
example_fastapi_app/observability_config/: log_config.py  trace_config.py
observability_mtl_instrument/: __init__.py  log_config.py  metric_config.py  trace_config.py
observability_mtl_instrument/logs/: log_config.py
observability_mtl_instrument/logs/builders/: fullLogBase.py  fullLogConfig.py  fullLogConfigAsync.py
observability_mtl_instrument/logs/request_strategies/: log_request.py  log_request_interface.py
observability_mtl_instrument/metrics/: metric_config.py
observability_mtl_instrument/tracer/: trace_config.py
observability_package/: docker-compose.yml  observability.drawio
observability_package/etc/: dashboards.yml  grafana.ini
observability_package/etc/dashboards/: fastapi-app.json
observability_package/etc/grafana/: datasources.yml
observability_package/loki/: loki-config.yaml
observability_package/nginx/: nginx.conf
observability_package/prometheus/: prometheus.yml
observability_package/tempo/: tempo-local.yaml
tests/log/: conftest.py  utils.py
tests/log/log_config/: test_function_calls_in_the_constructor.py  test_log_config_atributtes.py
tests/log/loki_log_handler/: conftest.py  test_ get_utc_timestamp_unix.py  test_build_extra_labels.py  test_build_loki_log_data.py  test_build_stream_dict.py  test_send_logs.py
