[tool.poetry]
name = "observability-mtl-instrument"
version = "0.1.0"
description = ""
authors = ["SergioNascimento07 <sergioricjr7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.8"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
